--- a/turbo.json
+++ b/turbo.json
@@ -52,7 +52,8 @@
         "NEXT_PUBLIC_GLOBAL_TRIBUNAL_ADDRESS",
         "NEXT_PUBLIC_DEFAULT_PROPOSAL_COLLATERAL",
         "NEXT_PUBLIC_DEFAULT_DISPUTE_COLLATERAL",
-        "NEXT_PUBLIC_WALLET_CONNECT_ID"
+        "NEXT_PUBLIC_WALLET_CONNECT_ID",
+        "NEXT_PUBLIC_DEFAULT_RULING_TIMEOUT"
       ]
     },
     "test": {
