--- a/pkg/contracts/package.json
+++ b/pkg/contracts/package.json
@@ -8,6 +8,7 @@
     "_build": "forge build --sizes",
     "lint": "forge fmt",
     "test": "forge test -vvv",
+    "test:force": "forge test -vvv --force",
     "format": "forge fmt"
   }
 }
