--- a/turbo.json
+++ b/turbo.json
@@ -32,6 +32,7 @@
         "NEXT_PUBLIC_RPC_URL_OP_TESTNET",
         "NEXT_PUBLIC_RPC_URL_ETH_TESTNET",
         "PINATA_JWT",
+        "NEXT_PUBLIC_PINATA_KEY",
         "GITCOIN_PASSPORT_API_KEY",
         "SCORER_ID",
         "PASSPORT_SCORER_ADDRESS",
