--- a/turbo.json
+++ b/turbo.json
@@ -54,7 +54,9 @@
         "NEXT_PUBLIC_DEFAULT_PROPOSAL_COLLATERAL",
         "NEXT_PUBLIC_DEFAULT_DISPUTE_COLLATERAL",
         "NEXT_PUBLIC_WALLET_CONNECT_ID",
-        "NEXT_PUBLIC_DEFAULT_RULING_TIMEOUT"
+        "NEXT_PUBLIC_DEFAULT_RULING_TIMEOUT",
+        "NEXT_PUBLIC_RPC_URL_ARBITRUM",
+        "NEXT_PUBLIC_SUBGRAPH_URL_ARBITRUM"
       ]
     },
     "test": {
