--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -8,6 +8,7 @@
     "manifest:local": "node ./src/scripts/mustache localhost",
     "manifest:arbsep": "node ./src/scripts/mustache arbsepolia",
     "manifest:ethsep": "node ./src/scripts/mustache ethsepolia",
+    "manifest:arbitrum": "node ./src/scripts/mustache arbitrum",
     "build:arbsep": "pnpm manifest:arbsep && graph codegen && graph build",
     "build:ethsep": "pnpm manifest:ethsep && graph codegen && graph build",
     "create-local": "graph create --node http://localhost:8020/ kamikazebr/gv2",
@@ -15,6 +16,7 @@
     "deploy:local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kamikazebr/gv2 -l v0.0.3",
     "deploy:arbsep": "pnpm manifest:arbsep && graph deploy --studio gv2-arbsepolia",
     "deploy:ethsep": "pnpm manifest:ethsep && graph deploy --studio gv2-ethsepolia",
+    "deploy:arbitrum": "pnpm manifest:arbitrum && graph deploy --studio gv2-arbitrum",
     "build-deploy:arbsep": "pnpm build:arbsep && pnpm deploy:arbsep:last",
     "build-deploy:ethsep": "pnpm build:ethsep && pnpm deploy:ethsep:last",
     "local": "pnpm create-local && pnpm build && pnpm deploy:local",
