--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -12,9 +12,9 @@ dataSources:
         type: Int
         data: 421614
     source:
-      address: "0x3d21D7C4c79bA08326C455E8CfEe2DEcec2c887e"
+      address: "0x1abc1e64fba3bc4ff15a23c22859464dd476fd3f"
       abi: RegistryFactoryV0_0
-      startBlock: 73590700
+      startBlock: 75399760
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -46,9 +46,9 @@ dataSources:
         type: Int
         data: 421614
     source:
-      address: "0xfF53a163e43EccC00d8FdE7acA24aa9FA4da7356"
+      address: "0xe19f1c28eb68f0af67beda9e18be519ee5e035ef"
       abi: PassportScorer
-      startBlock: 73590700
+      startBlock: 75399760
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -176,6 +176,8 @@ templates:
           handler: handleProposalDisputed
         - event: Ruling(indexed address,indexed uint256,uint256)
           handler: handleDisputeRuled
+        - event: ProposalCancelled(uint256)
+          handler: handleProposalCancelled
  
       file: ./src/mappings/cv-strategy.ts
   
