--- a/turbo.json
+++ b/turbo.json
@@ -27,7 +27,7 @@
       ],
       "env": [
         "PINATA_JWT",
-        "NEXT_PUBLIC_PINATA_KEY",
+        "PINATA_KEY",
         "GITCOIN_PASSPORT_API_KEY",
         "SCORER_ID",
         "PASSPORT_SCORER_ADDRESS",
@@ -42,7 +42,7 @@
         "NEXT_PUBLIC_SENTRY_DSN",
         "NEXT_PUBLIC_SENTRY_REPLAYS_ON_ERROR_SAMPLE_RATE",
         "NEXT_PUBLIC_SENTRY_REPLAYS_SESSION_SAMPLE_RATE",
-        "NEXT_PUBLIC_IPFS_GATEWAY",
+        "IPFS_GATEWAY",
         "NEXT_PUBLIC_GLOBAL_TRIBUNAL_ADDRESS",
         "NEXT_PUBLIC_WALLET_CONNECT_ID",
         "NEXT_PUBLIC_DEFAULT_RULING_TIMEOUT",
