--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -11,7 +11,6 @@ NEXT_PUBLIC_RPC_URL_ETH_TESTNET=https://arb-sepolia.g.alchemy.com/v2/YOUR_KEY_HE
 
 RPC_URL_LOCAL=http://127.0.0.1:8545
 
-PINATA_JWT=
 GITCOIN_PASSPORT_API_KEY=
 SCORER_ID=
 PASSPORT_SCORER_ADDRESS=
@@ -23,4 +22,8 @@ PORT=
 
 NEXT_PUBLIC_SENTRY_REPLAYS_ON_ERROR_SAMPLE_RATE=1
 NEXT_PUBLIC_SENTRY_REPLAYS_SESSION_SAMPLE_RATE=1
+
+PINATA_JWT=
+PINATA_KEY=
+IPFS_GATEWAY=
 
