--- a/pkg/contracts/package.json
+++ b/pkg/contracts/package.json
@@ -7,7 +7,7 @@
     "fork": "make fork",
     "_build": "forge build --sizes",
     "lint": "forge fmt",
-    "test": "forge test --force -vvv",
+    "test": "forge test -vvv",
     "test:force": "forge test -vvv --force",
     "format": "forge fmt"
   }
