--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -12,9 +12,9 @@ dataSources:
         type: Int
         data: 421614
     source:
-      address: "0x7a603877488db46c0f6b40c2c770becfd7a65593"
+      address: "0xbee3497e13bd21aebc2afead07e8857bf9c0afc2"
       abi: RegistryFactoryV0_0
-      startBlock: 77903587
+      startBlock: 78229467
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -46,9 +46,9 @@ dataSources:
         type: Int
         data: 421614
     source:
-      address: "0xf0988f8c1c2fb62ea746b86c1ce70636fa4a49ff"
+      address: "0x83e62eaa2d37f901919dd4887133034655184077"
       abi: PassportScorer
-      startBlock: 77903587
+      startBlock: 78229467
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -154,7 +154,7 @@ templates:
         - name: Allo
           file: ../contracts/out/Allo.sol/Allo.json
       eventHandlers:
-        - event: InitializedCV(uint256,((uint256,uint256,uint256,uint256),uint8,uint8,(uint256),(address,address,uint256,uint256,uint256,uint256),address,address))
+        - event: InitializedCV(uint256,((uint256,uint256,uint256,uint256),uint8,uint8,(uint256),(address,address,uint256,uint256,uint256,uint256),address,address,address[]))
           handler: handleInitialized
         - event: ProposalCreated(uint256,uint256)
           handler: handleProposalCreated
@@ -180,6 +180,10 @@ templates:
           handler: handleProposalCancelled
         - event: ArbitrableConfigUpdated(uint256,address,address,uint256,uint256,uint256,uint256)
           handler: handleArbitrableConfigUpdated
+        - event: AllowlistMembersAdded(uint256,address[])
+          handler: handleAllowlistMembersAdded
+        - event: AllowlistMembersRemoved(uint256,address[])
+          handler: handleAllowlistMembersRemoved
  
       file: ./src/mappings/cv-strategy.ts
   
