--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: arbitrum-sepolia
+    network: optimism
     context:
       chainId: 
         type: Int
-        data: 421614
+        data: 10
     source:
-      address: "0x7a603877488db46c0f6b40c2c770becfd7a65593"
+      address: "0x1fac47cf25f1ca9f20ba366099d26b28401f5715"
       abi: RegistryFactoryV0_0
-      startBlock: 77903587
+      startBlock: 125112016
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -40,15 +40,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: arbitrum-sepolia
+    network: optimism
     context:
       chainId: 
         type: Int
-        data: 421614
+        data: 10
     source:
-      address: "0xf0988f8c1c2fb62ea746b86c1ce70636fa4a49ff"
+      address: "0xc93830dd463516ed5f28f6cd4f837173b87ff389"
       abi: PassportScorer
-      startBlock: 77903587
+      startBlock: 125112016
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -72,7 +72,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: arbitrum-sepolia
+    network: optimism
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -134,7 +134,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: arbitrum-sepolia
+    network: optimism
     source:
       abi: CVStrategyV0_0
     mapping:
