--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: matic
+    network: optimism
     context:
-      chainId:
+      chainId: 
         type: Int
-        data: 42161
+        data: 10
     source:
-      address: "0x57a9835b204dbcc101dbf981625a3625e8043b9c"
+      address: "0x1fac47cf25f1ca9f20ba366099d26b28401f5715"
       abi: RegistryFactoryV0_0
-      startBlock: 61584765
+      startBlock: 125112016
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -33,22 +33,22 @@ dataSources:
         - event: CommunityValiditySet(address,bool)
           handler: handleCommunityValiditySet
         - event: ProtocolFeeSet(address,uint256)
-          handler: handleProtocolFeeSet
+          handler: handleProtocolFeeSet  
         - event: Initialized(uint8)
-          handler: handleRegistryInitialized
+          handler: handleRegistryInitialized  
       file: ./src/mappings/registry-factory.ts
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: matic
+    network: optimism
     context:
-      chainId:
+      chainId: 
         type: Int
-        data: 42161
+        data: 10
     source:
-      address: "0x1fac47cf25f1ca9f20ba366099d26b28401f5715"
+      address: "0xc93830dd463516ed5f28f6cd4f837173b87ff389"
       abi: PassportScorer
-      startBlock: 61584765
+      startBlock: 125112016
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -72,7 +72,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: matic
+    network: optimism
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -94,7 +94,7 @@ templates:
           file: ../contracts/out/CVStrategyV0_0.sol/CVStrategyV0_0.json
         - name: RegistryFactoryV0_0
           file: ../contracts/out/RegistryFactoryV0_0.sol/RegistryFactoryV0_0.json
-
+     
       eventHandlers:
         - event: RegistryInitialized(bytes32,string,(uint256,string))
           handler: handleInitialized
@@ -123,7 +123,7 @@ templates:
         - event: MemberPowerIncreased(address,uint256)
           handler: handleMemberPowerIncreased
         # - event: BasisStakedAmountSet(uint256)
-        # handler: handleBasisStakedAmountSet
+          # handler: handleBasisStakedAmountSet
         # - event: CouncilSafeSet(address)
         #   handler: handleCouncilSafeSet
         # - event: CouncilSafeChangeStarted(address,address)
@@ -134,7 +134,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: matic
+    network: optimism
     source:
       abi: CVStrategyV0_0
     mapping:
@@ -180,9 +180,9 @@ templates:
           handler: handleProposalCancelled
         - event: ArbitrableConfigUpdated(uint256,address,address,uint256,uint256,uint256,uint256)
           handler: handleArbitrableConfigUpdated
-
+ 
       file: ./src/mappings/cv-strategy.ts
-
+  
   - name: ProposalDisputeMetadata
     kind: file/ipfs
     mapping:
@@ -195,7 +195,7 @@ templates:
       abis:
         - name: CVStrategyV0_0
           file: ../contracts/out/CVStrategyV0_0.sol/CVStrategyV0_0.json
-
+  
   - name: ProposalMetadata
     kind: file/ipfs
     mapping:
